--- a/Javascri-t-projects/Reviews/index.html
+++ b/Javascri-t-projects/Reviews/index.html
@@ -14,7 +14,35 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+      <section class="container">
+        <div class="title">
+          <h2>Reviews</h2>
+          <div class="underline">
+          </div>
+          <!--Review-->
+            <article class="review">
+              <div class="img-container">
+                <img src="./person-1.jpeg" id = "person-img" alt="">
+              </div>
+              <h4 id="author">Virat Chokli</h4>
+              <p id="job">Professional cricketer</p>
+              <p id="info">Virat Chokli is a professional cricketer. His name used to be Virat kohli but due to his multiple instances of choking during important matches and winning all the not very important matches, he is also reffered as virat CHOKLI. His team never wins trophies but are great at winning a people's hearts. There trophy cabinet was renamed to the HEART cabinet because of the excessive amount of hearts they won.
+              </p>
+              <!--BUTTONS-prev and next-->
+              <div class="button-container">
+                <button class="prev-btn">
+                  <i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="next-btn">
+                  <i class="fas fa-chevron-right"></i>
+                </button>
+              </div>
+              <!--random button-->
+              <button class="random-btn">SURPRISE ME!</button>
+            </article>
+      </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
